--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lobo - Desenvolvedor e UX/UI Designer</title>
+    <title>Antoniel - Desenvolvedor e UX/UI Designer</title>
     <meta name="description" content="Desenvolvedor Front End & UX/UI Designer Localizado em Colinas do Tocantins">
     <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="icon" href="./detalhe.svg" type="image/svg+xml">
 </head>
 
 <body>
@@ -62,7 +63,7 @@
                 <span class="empresa-ano">2044</span>
                 <h3 class="empresa-titulo">Brafé</h3>
                 <span class="empresa-titulo">Desesnvolvedor Júnior</span>
-                <p class="emrepsa-texto">No projeto Bikecraft eu trabalhei no desenvolvimneto completo do HTML,</p>
+                <p class="emrepsa-texto">No projeto Bikecraft eu trabalhei no desenvolvimneto completo do HTML.</p>
                 <ul class="empresa-habilidade">
                     <li>Email Marketing</li>
                     <li>HTML</li>
@@ -81,14 +82,14 @@
 
             <div>
                 <p class="formacao-texto">
-                    Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
+                    Minha mais recente experiência acadêmica foi a <strong>licenciatura</strong> 🎓 que fiz no IFTO em <strong>Computação</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
                 </p>
 
                 <ul class="faculdade-lista">
                     <li class="faculdade">
-                        <span class="faculdade-tipo">Bacharel</span>
-                        <h3 class="faculdade-curso">Administração de Empresas</h3>
-                        <span class="faculdade-instituicao">UFRRJ</span>
+                        <span class="faculdade-tipo">Licenciatura</span>
+                        <h3 class="faculdade-curso">Licenciatura em Computação</h3>
+                        <span class="faculdade-instituicao">IFTO</span>
                     </li>
 
                     <li class="faculdade">
@@ -129,11 +130,11 @@
             <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 🖖</p>
 
             <ul class="footer-contato">
-                <li>lobo@email.com</li>
-                <li>+55 21 9999-9999</li>
+                <li>tonielaureliano@gmail.com</li>
+                <li>+55 63 9999-9999</li>
                 <li><a href="https://www.instagram.com/">@instagram</a></li>
             </ul>
-            <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
+            <p class="footer-copy">Antoniel. Alguns direitos reservados.</p>
         </div>
     </footer>
 </body>
