--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="Desenvolvedor Front End & UX/UI Designer Localizado em Colinas do Tocantins">
     <link rel="stylesheet" href="./css/style.min.css">
     <link rel="icon" href="./detalhe.svg" type="image/svg+xml">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https: //fonts.googleapis.com/css2? família= Fira+Sans:wght@400;700 & display=swap" rel="stylesheet">
 </head>
 
 <body>
